sas-core/main/default/objects/Approval_Request__c/Approval_Request__c.object-meta.xml
<CustomObject>
    <label>Approval Request</label>
    <nameField>
        <displayFormat>AR-{YY}{MM}{DD}-{0000}</displayFormat>
        <label>Approval Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>