sas-core/main/default/objects/Approval_Request__c/fields/Control_Reason__c.field-meta.xml
<CustomField>
    <fullName>Control_Reason__c</fullName>
    <description>Reason why the settlement was flagged in control evaluation</description>
    <label>Control Reason</label>
    <type>TextArea</type>
</CustomField>