sas-core/main/default/objects/Approval_Request__c/fields/Rejection_Comment__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Comment__c</fullName>
    <label>Rejection Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>