sas-core/main/default/objects/Approval_Request__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wrong Compensation</fullName>
            </value>
            <value>
                <fullName>Fraud identified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>