sas-core/main/default/objects/Approval_Request__c/fields/Settlement__c.field-meta.xml
<CustomField>
    <fullName>Settlement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Approval Request related to a payment</description>
    <label>Settlement</label>
    <referenceTo>Settlement__c</referenceTo>
    <relationshipLabel>Approval Requests</relationshipLabel>
    <relationshipName>Approval_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>